Aligned nav and footer columns correctly

--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,7 @@ nav{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .ncol{
@@ -52,6 +53,7 @@ footer{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .fcol{
